@@ -17,3 +17,6 @@ close = data/close.png
 
 delete.small = data/small_delete.png
 default.small = data/small_default.png
+
+dockable.default = data/dockable.png
+dockStation.default = data/dockStation.png
